--- a/sprx/Makefile
+++ b/sprx/Makefile
@@ -1,4 +1,4 @@
-TARGETS	:=	libsysfs libaudio libcamera libgcm_sys libio libjpgdec liblv2 libnet libnetctl libpngdec libsysmodule libsysutil libgem
+TARGETS	:=	libsysfs libaudio libcamera libgcm_sys libio libjpgdec liblv2 libnet libnetctl libpngdec libsysmodule libsysutil libgem libvdec
 
 all:
 	@for dir in $(TARGETS); do \
