Added a type field to RSX program attribute data structures, useful for determining if an attribute is a texture map or not.
Fixed a bug in cgcomp's parsing of swizzle field of program assembly.

Some (sloppy) fixes to allow the PSL1GHT tools to build & run on Mac OS:
- Add -L/opt/local/lib to Makefiles for geohot and sprxlinker tools (/opt/local/lib is
  where MacPorts puts things like libgmp and libelf).
- For cgcomp on Mac OS, add full (default) path to Cg dylib.

--- a/tools/sprxlinker/Makefile
+++ b/tools/sprxlinker/Makefile
@@ -26,8 +26,8 @@ TARGET		:= sprxlinker$(POSTFIX)
 SOURCE		:= .
 INCLUDE		:= .
 
-CFLAGS		:= -O2 -Wall --std=gnu99
-LDFLAGS		:= -lelf
+CFLAGS		:= -O2 -Wall --std=gnu99 -I/opt/local/include
+LDFLAGS		:= -L/opt/local/lib -lelf
 
 CC		:= gcc
 
