Makefile fixes. Provide default values for package creation. Add "trivial" template sample.

--- a/samples/graphics/cairo/Makefile
+++ b/samples/graphics/cairo/Makefile
@@ -111,6 +111,8 @@ run:
 	ps3load $(OUTPUT).self
 
 
+pkg: $(TARGET).pkg
+
 #---------------------------------------------------------------------------------
 else
 
