- All samples can packageable - Minor Makefile changes

--- a/samples/graphics/cairo/Makefile
+++ b/samples/graphics/cairo/Makefile
@@ -114,6 +114,7 @@ clean:
 run:
 	ps3load $(OUTPUT).self
 
+pkg: $(BUILD) $(OUTPUT).pkg
 
 #---------------------------------------------------------------------------------
 else
