--- a/samples/spu/spuparallel/Makefile
+++ b/samples/spu/spuparallel/Makefile
@@ -119,6 +119,7 @@ clean:
 run:
 	ps3load $(OUTPUT).self
 
+pkg: $(BUILD) $(OUTPUT).pkg
 
 #---------------------------------------------------------------------------------
 else
