--- a/samples/graphics/videoTest/Makefile
+++ b/samples/graphics/videoTest/Makefile
@@ -114,6 +114,8 @@ clean:
 run:
 	ps3load $(OUTPUT).self
 
+pkg:	$(BUILD) $(OUTPUT).pkg
+
 
 #---------------------------------------------------------------------------------
 else
