--- a/samples/input/Makefile
+++ b/samples/input/Makefile
@@ -5,3 +5,5 @@ all:
 
 clean:
 	@for TARGET in $(TARGETS); do $(MAKE) --no-print-directory -C $$TARGET clean; done
+pkg:
+	@for TARGET in $(TARGETS); do $(MAKE) --no-print-directory -C $$TARGET pkg; done
