--- a/samples/sys/osk/Makefile
+++ b/samples/sys/osk/Makefile
@@ -113,6 +113,7 @@ clean:
 run:
 	ps3load $(OUTPUT).self
 
+pkg:	$(BUILD) $(OUTPUT).pkg 
 
 #---------------------------------------------------------------------------------
 else
