--- a/samples/sys/threadtest/Makefile
+++ b/samples/sys/threadtest/Makefile
@@ -113,7 +113,7 @@ clean:
 run:
 	ps3load $(OUTPUT).self
 
-
+pkg:	$(BUILD) $(OUTPUT).pkg
 #---------------------------------------------------------------------------------
 else
 
