--- a/tools/sprxlinker/Makefile
+++ b/tools/sprxlinker/Makefile
@@ -31,8 +31,9 @@ ifneq (,$(findstring CYGWIN,$(UNAME)))
 endif
 
 ifneq (,$(findstring Darwin,$(UNAME)))
-	CFLAGS	+= -I/opt/local/include -I/usr/local/opt/libelf/include/libelf
-	LDFLAGS	+= -L/opt/local/lib -lelf
+	CFLAGS	+= -I/opt/local/include -I/usr/local/opt/libelf/include/libelf \
+	           -I/opt/homebrew/include -I/opt/homebrew/opt/libelf/include/libelf
+	LDFLAGS	+= -L/opt/local/lib -L/opt/homebrew/lib -lelf
 	OS		:= Mac
 endif
 
