Make a CMake SPU Sample
This is untested, so I don't fully know if it works on a PS3, I just know it builds

--- a/templates/cmake-trivial/CMakeLists.txt
+++ b/templates/cmake-trivial/CMakeLists.txt
@@ -2,7 +2,7 @@ cmake_minimum_required(VERSION 3.0)
 
 project(test C)
 
-include($ENV{PS3DEV}/contrib/psl1ght.cmake)
+include($ENV{PS3DEV}/contrib/ppu-helpers.cmake)
 
 add_executable(test_c test.c)
 add_ps3_build_steps(test_c)
