--- a/tools/geohot/Makefile
+++ b/tools/geohot/Makefile
@@ -75,8 +75,8 @@ package_finalize$(POSTFIX): package_finalize.c
 
 install: $(TARGETS)
 	@echo Installing $(TARGETS)
-	@[ -d $(PS3DEV)/bin ] || mkdir -p $(PS3DEV)/bin
-	@install -m 755 $(TARGETS) $(PS3DEV)/bin
+	@[ -d $(DESTDIR)$(PS3DEV)/bin ] || mkdir -p $(DESTDIR)$(PS3DEV)/bin
+	@install -m 755 $(TARGETS) $(DESTDIR)$(PS3DEV)/bin
 
 clean:
 	@echo clean ...
