--- a/tools/ps3py/Makefile
+++ b/tools/ps3py/Makefile
@@ -25,7 +25,7 @@ clean:
 	@rm -rf build pkgcrypt.*
 
 install: all
-	@[ -d $(PS3DEV)/bin ] || mkdir -p $(PS3DEV)/bin
+	@[ -d $(DESTDIR)$(PS3DEV)/bin ] || mkdir -p $(DESTDIR)$(PS3DEV)/bin
 	@echo Installing ICON0.PNG sfo.xml pkgcrypt.* fself.py Struct.py sfo.py pkg.py
-	@install -m 644 ICON0.PNG sfo.xml pkgcrypt.* $(PS3DEV)/bin
-	@./install-scripts $(PS3DEV)/bin/ fself.py Struct.py sfo.py pkg.py
+	@install -m 644 ICON0.PNG sfo.xml pkgcrypt.* $(DESTDIR)$(PS3DEV)/bin
+	@./install-scripts $(DESTDIR)$(PS3DEV)/bin/ fself.py Struct.py sfo.py pkg.py
