--- a/common/vectormath/spu/Makefile
+++ b/common/vectormath/spu/Makefile
@@ -7,9 +7,9 @@
 all:
 
 install:
-	@[ -d $(PSL1GHT)/spu/include/vectormath ] || mkdir -p $(PSL1GHT)/spu/include/vectormath
-	@cp -frv $(CURDIR)/c $(PSL1GHT)/spu/include/vectormath
-	@cp -frv $(CURDIR)/cpp $(PSL1GHT)/spu/include/vectormath
+	@[ -d $(DESTDIR)$(PSL1GHT)/spu/include/vectormath ] || mkdir -p $(DESTDIR)$(PSL1GHT)/spu/include/vectormath
+	@cp -frv $(CURDIR)/c $(DESTDIR)$(PSL1GHT)/spu/include/vectormath
+	@cp -frv $(CURDIR)/cpp $(DESTDIR)$(PSL1GHT)/spu/include/vectormath
 
 clean:
 
