--- a/spu/Makefile
+++ b/spu/Makefile
@@ -10,8 +10,8 @@ all:
 	@$(MAKE) -C libspuatomic --no-print-directory
 
 install-headers:
-	@[ -d $(PSL1GHT)/spu ] || mkdir -p $(PSL1GHT)/spu
-	@cp -frv include $(PSL1GHT)/spu
+	@[ -d $(DESTDIR)$(PSL1GHT)/spu ] || mkdir -p $(DESTDIR)$(PSL1GHT)/spu
+	@cp -frv include $(DESTDIR)$(PSL1GHT)/spu
 
 install: install-headers
 	@$(MAKE) -C libsputhread install --no-print-directory
